add checks lambda and EventBridge rule

--- a/install/config.json
+++ b/install/config.json
@@ -28,8 +28,11 @@
             },
             "settings": {
                 "functionName": "settings",
-                "fileLocation": "lambdas/aws_best_practices_settings.py",
-                "dependencies": ["cron_validator"]
+                "fileLocation": "lambdas/aws_best_practices_settings.py"
+            },
+            "checks": {
+                "functionName": "checks",
+                "fileLocation": "lambdas/aws_best_practices_checks.py"
             }
         }
     }
