--- a/install/config.json
+++ b/install/config.json
@@ -16,7 +16,9 @@
         "dynamoDBPolicyName": "ddb_policy",
         "eventBridgeRulePolicyName": "event_bridge_rule_policy",
         "lambdaRoleName": "lambda_role",
-        "snsPolicyName": "sns_policy"
+        "snsPolicyName": "sns_policy",
+        "configRulePolicyName": "required_tags_policy",
+        "configRoleName": "config_role"
     },
     "lambda":{
         "defaults":{
@@ -45,6 +47,42 @@
                 "fileLocation": "lambdas/aws_best_practices_schedule.py"
             }
         }
+    },
+    "configRules": {
+      "ruleName": "required_tags_rule",
+      "requiredTags": ["environment", "project"],
+      "resourcesToChecks": [
+            "ACM_CERTIFICATE",
+            "AUTO_SCALING_GROUP",
+            "CLOUDFORMATION_STACK",
+            "CODEBUILD_PROJECT",
+            "DYNAMODB_TABLE",
+            "EC2_CUSTOMER_GATEWAY",
+            "EC2_INSTANCE",
+            "EC2_INTERNET_GATEWAY",
+            "EC2_NETWORK_ACL",
+            "EC2_NETWORK_INTERFACE",
+            "EC2_ROUTE_TABLE",
+            "EC2_SECURITY_GROUP",
+            "EC2_SUBNET",
+            "EBS_VOLUME",
+            "EC2_VPC",
+            "EC2_VPN_CONNECTION",
+            "EC2_VPN_GATEWAY",
+            "ELB_LOAD_BALANCER",
+            "ELBV2_LOAD_BALANCER",
+            "RDS_DB_INSTANCE",
+            "RDS_DB_SECURITY_GROUP",
+            "RDS_DB_SNAPSHOT",
+            "RDS_DB_SUBNET_GROUP",
+            "RDS_EVENT_SUBSCRIPTION",
+            "REDSHIFT_CLUSTER",
+            "REDSHIFT_CLUSTER_PARAMETER_GROUP",
+            "REDSHIFT_CLUSTER_SECURITY_GROUP",
+            "REDSHIFT_CLUSTER_SNAPSHOT",
+            "REDSHIFT_CLUSTER_SUBNET_GROUP",
+            "S3_BUCKET"
+      ]
     },
     "api": {
       
