--- a/install/config.json
+++ b/install/config.json
@@ -117,16 +117,30 @@
             "name": "basic",
             "version": "1.0",
             "checks": [{
-                    "name": "NO_MFA_ON_ROOT"
+                    "name": "NO_MFA_ON_ROOT",
+                    "emailTemplates":{
+                        "baseFileName": "basic_no_mfa_on_root"
+                    }
                 },
                 {
-                    "name": "NO_PASSWORD_POLICY"
+                    "name": "NO_PASSWORD_POLICY",
+                    "emailTemplates":{
+                        "baseFileName": "basic_no_password_policy"
+                    }
                 },
                 {
-                    "name": "PUBLIC_BUCKETS"
+                    "name": "PUBLIC_BUCKETS",
+                    "emailTemplates":{
+                        "baseFileName": "basic_s3_public_access",
+                        "itemFileName": "basic_s3_public_access_item"
+                    }
                 },
                 {
                     "name": "MISSING_TAGS",
+                    "emailTemplates":{
+                        "baseFileName": "basic_missing_tags",
+                        "itemFileName": "basic_missing_tags_item"
+                    },
                     "config": {
                         "regions": ["us-west-2"],
                         "configRuleName": "required_tags_rule",
@@ -134,10 +148,16 @@
                     }
                 },
                 {
-                    "name": "NO_BUSINESS_SUPPORT"
+                    "name": "NO_BUSINESS_SUPPORT",
+                    "emailTemplates":{
+                        "baseFileName": "basic_no_premium_support"
+                    }
                 },
                 {
-                    "name": "NO_BUDGET"
+                    "name": "NO_BUDGET",
+                    "emailTemplates":{
+                        "baseFileName": "basic_no_budget"
+                    }
                 }
             ]
         }]
