--- a/install/config.json
+++ b/install/config.json
@@ -121,9 +121,7 @@
                             "ec2:DescribeAddresses",
                             "iam:GetAccountPasswordPolicy",
                             "iam:GetAccountSummary",
-                            "acm:ListCertificates",
-                            "acm:DescribeCertificate",
-                            "acm:ListTagsForCertificate"
+                            "tag:GetResources"
                         ],
                         "resources": ["*"]
                     }
@@ -181,39 +179,19 @@
                         "itemFileName": "basic_missing_tags_item"
                     },
                     "config": {
-                        "regions": ["us-west-2"],
+                        "regions": ["us-west-2", "us-east-1"],
                         "requiredTags": ["environment", "project"],
                         "resources": [
-                            "ACM_CERTIFICATE",
-                            "AUTO_SCALING_GROUP",
-                            "CLOUDFORMATION_STACK",
-                            "CODEBUILD_PROJECT",
-                            "DYNAMODB_TABLE",
-                            "EC2_CUSTOMER_GATEWAY",
-                            "EC2_INSTANCE",
-                            "EC2_INTERNET_GATEWAY",
-                            "EC2_NETWORK_ACL",
-                            "EC2_NETWORK_INTERFACE",
-                            "EC2_ROUTE_TABLE",
-                            "EC2_SECURITY_GROUP",
-                            "EC2_SUBNET",
-                            "EBS_VOLUME",
-                            "EC2_VPC",
-                            "EC2_VPN_CONNECTION",
-                            "EC2_VPN_GATEWAY",
-                            "ELB_LOAD_BALANCER",
-                            "ELBV2_LOAD_BALANCER",
-                            "RDS_DB_INSTANCE",
-                            "RDS_DB_SECURITY_GROUP",
-                            "RDS_DB_SNAPSHOT",
-                            "RDS_DB_SUBNET_GROUP",
-                            "RDS_EVENT_SUBSCRIPTION",
-                            "REDSHIFT_CLUSTER",
-                            "REDSHIFT_CLUSTER_PARAMETER_GROUP",
-                            "REDSHIFT_CLUSTER_SECURITY_GROUP",
-                            "REDSHIFT_CLUSTER_SNAPSHOT",
-                            "REDSHIFT_CLUSTER_SUBNET_GROUP",
-                            "S3_BUCKET"
+                            "ec2",
+                            "acm",
+                            "s3",
+                            "rds",
+                            "lambda",
+                            "dynamodb",
+                            "cloudwatch",
+                            "elasticfilesystem",
+                            "sagemaker",
+                            "redshift"
                         ]
                     }
                 },
@@ -236,7 +214,7 @@
                         "itemFileName": "basic_unused_eip_item"
                     },
                     "config": {
-                        "regions": ["*"]
+                        "regions": ["us-west-2", "us-east-1"]
                     }
                 }
             ]
