--- a/install/config.json
+++ b/install/config.json
@@ -122,6 +122,7 @@
                             "ec2:DescribeSecurityGroups",
                             "ec2:DescribeSubnets",
                             "ec2:DescribeNetworkInterfaces",
+                            "ec2:DescribeRouteTables",
                             "elasticloadbalancing:DescribeLoadBalancers",
                             "iam:GetAccountPasswordPolicy",
                             "iam:GetAccountSummary",
@@ -245,14 +246,23 @@
                 },
                 {
                     "name": "USING_DEFAULT_VPC",
-                    "title": "Default VPC is in use",
+                    "title": "Default VPC Is In Use",
                     "description": "Check if the default VPC exists and if there are any resources in it. It is recommended to create a custom VPC and control the network configuration",
                     "emailTemplates": {
                         "baseFileName": "basic_default_vpc",
                         "itemFileName": "basic_default_vpc_item"
                     },
                     "config":{
-                        "regions": ["us-west-2"]
+                        "regions": ["us-west-1", "us-west-2", "us-east-1", "us-east-2"]
+                    }
+                },
+                {
+                    "name": "EC2_IN_PUBLIC_SUBNET",
+                    "title": "EC2 Running In Public Subnet",
+                    "description": "Check if EC2 instances are running in a public subnet. It is recommended to run resources such as EC2 in private subnet when possible",
+                    "emailTemplates": {
+                        "baseFileName": "basic_ec2_in_public_subnet",
+                        "itemFileName": "basic_ec2_in_public_subnet_item"
                     }
                 }
             ]
